kubernetes/mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:5.7
          volumeMounts:
            - mountPath: /data/db
              name: mysql-data
          args:
            - "--ignore-db-dir=lost+found"
          ports:
            - containerPort: 3306
          resources:
            limits:
              memory: 350Mi
      volumes:
        - name: mysql-data
          persistentVolumeClaim:
            claimName: host-pvc2
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  selector:
    app: mysql
  ports:
    - name: mysql
      port: 3306
