kubernetes/product.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products
spec:
  replicas: 2
  selector:
    matchLabels:
      app: products
  template:
    metadata:
      labels:
        app: products
    spec:
      containers:
        - name: products
          image: fabricio211/product-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: 350Mi
          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /actuator/info
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 40
            timeoutSeconds: 2
            failureThreshold: 30
            successThreshold: 1
          readinessProbe:
            httpGet:
              scheme: HTTP
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
            successThreshold: 1
          volumeMounts:
            - name: config-repo-volume
              mountPath: /config-repo
      volumes:
        - name: config-repo-volume
          configMap:
            name: config-repo-product

---
apiVersion: v1
kind: Service
metadata:
  name: products
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: products
