kubernetes/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: product-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: product-service-route
spec:
  hosts:
    - "*"
  gateways:
    - product-gateway
  http:
    - match:
      - uri:
          prefix: "/products/"
      route:
        - destination:
            port:
              number: 8080
            host: products
