kubernetes/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: product-service
  annotations:
    kubernetes.io/ingress.allow-http: "false"
spec:
  rules:
    - host: api.estudo.kubernetes # Mude para o seu endereço
      http:
        paths:
          - path: /products
            backend:
              serviceName: products
              servicePort: 8080
