kubernetes/product-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: product-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: httsp
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: products
spec:
  hosts:
    - "*"
  gateways:
    - product-gateway
  http:
    - match:
        - uri:
            prefix: /
        - uri:
            prefix: /actuator/health
        - uri:
            prefix: /swagger-ui.html
      route:
        - destination:
            port:
              number: 8082
            host: products
